@@ -9,6 +9,9 @@ class WXProduct(models.Model):
     UP_SHELF   = 1
     DOWN_SHELF = 2
     
+    UP_ACTION  = 1
+    DOWN_ACTION  = 0
+    
     PRODUCT_STATUS = (
         (UP_SHELF,u'上架'),
         (DOWN_SHELF,u'下架')
@@ -41,6 +44,9 @@ class WXProduct(models.Model):
     status       = models.IntegerField(null=False,default=0,
                                        choices=PRODUCT_STATUS,
                                        verbose_name=u'是否上架')
+    
+    modified  = models.DateTimeField(auto_now=True,verbose_name=u'修改日期')
+    created   = models.DateTimeField(auto_now_add=True,verbose_name=u'创建日期')
     
     objects = WeixinProductManager()
     
@@ -76,7 +82,7 @@ class WXProductSku(models.Model):
     PRODUCT_STATUS = (
         (UP_SHELF,u'上架'),
         (DOWN_SHELF,u'下架')
-            )
+    )
             
     sku_id   = models.CharField(max_length=64,verbose_name=u'规格ID')
     product  = models.ForeignKey(WXProduct,verbose_name=u'微信商品')
@@ -90,6 +96,9 @@ class WXProductSku(models.Model):
     
     sku_price = models.FloatField(default=0,verbose_name=u'售价')
     ori_price = models.FloatField(default=0,verbose_name=u'原价')
+    
+    modified   = models.DateTimeField(auto_now=True,verbose_name=u'修改日期')
+    created   = models.DateTimeField(auto_now_add=True,verbose_name=u'创建日期')
     
     status       = models.IntegerField(null=False,default=UP_SHELF,
                                        choices=PRODUCT_STATUS,
@@ -155,7 +164,7 @@ class WXOrder(models.Model):
     order_total_price   = models.IntegerField(default=0,verbose_name=u'订单总价(分)')
     order_express_price = models.IntegerField(default=0,verbose_name=u'订单运费(分)')
     order_create_time   = models.DateTimeField(blank=True,null=True,verbose_name=u'创建时间')
-    order_status = models.IntegerField(choices=WXORDER_STATUS,default=WX_WAIT_PAY,verbose_name=u'订单状态')
+    order_status        = models.IntegerField(choices=WXORDER_STATUS,default=WX_WAIT_PAY,verbose_name=u'订单状态')
     
     receiver_name     = models.CharField(max_length=64,blank=True,verbose_name=u'收货人')
     receiver_province = models.CharField(max_length=24,blank=True,verbose_name=u'省')
